--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp</title>
-    <base href="/mjh-sakh/MOEX-Web/" />
+    <base href="/MOEX-Web/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
