--- a/_Imports.razor
+++ b/_Imports.razor
@@ -5,8 +5,8 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using BlazorApp
-@using BlazorApp.Shared
+@using MOEX_web
+@using MOEX_web.Shared
 @using MatBlazor
 @using System.Collections.Generic
 @using System
