matching deployment address

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -10,8 +10,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazorApp</title>
-    <base href="~/MOEX-Web/" />
+    <title>MOEX-Web 2</title>
+    <base href="/MOEX-Web/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
