--- a/Pages/Portfolio.razor
+++ b/Pages/Portfolio.razor
@@ -45,8 +45,8 @@
 
     public string stockName = "FXUS";
     public double stockValue = 1;
-    public DateTime startDate = new DateTime(2020, 06, 15);
-    public DateTime endDate = new DateTime(2020, 08, 19);
+    public DateTime startDate;
+    public DateTime endDate;
     public double price;
     public List<Stock> stocks = new List<Stock>();
     public double PortfolioStartValue;
@@ -79,6 +79,13 @@
         stocks = await SavingData.LoadDataFromFileAsync(PortfolioFile);
     }
 
-    //protected override async Task OnInitializedAsync() => await GetDataAsync();
+    protected override async Task OnInitializedAsync() => await SetDates();
+
+    private async Task SetDates()
+    {
+        endDate = DateTime.Today.AddDays((1 - (int)DateTime.Today.DayOfWeek));
+        startDate = endDate.AddDays(-365);
+        startDate = startDate.AddDays((1 - (int)startDate.DayOfWeek));
+    }
 
 }
