refactor(Namespaces): Make namespaces consistent and non-conflicting, fix the unit test

--- a/MOEX_web/_Imports.razor
+++ b/MOEX_web/_Imports.razor
@@ -1,14 +1,14 @@
-﻿@using System.Net.Http
+﻿@using MatBlazor
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using MOEX_web
-@using MOEX_web.Shared
-@using MOEX_web.Portfolio
-@using MatBlazor
+@using System.Net.Http
+@using MOEX
+@using MOEX.Shared
+@using MOEX.Portfolio
 @using System.Collections.Generic
 @using System
 @using System.Linq
