--- a/MOEX_web/Pages/_Host.cshtml
+++ b/MOEX_web/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace MOEX_web.Pages
+@namespace MOEX.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
