--- a/MOEX_web/Pages/Portfolio.razor
+++ b/MOEX_web/Pages/Portfolio.razor
@@ -1,5 +1,7 @@
 @page "/"
+@using MOEX.Services
 @using MOEX.Portfolio
+@inject MoexService moexService
 
 <h1>Stock Price Getter!</h1>
 <h2>Period</h2>
@@ -65,8 +67,8 @@
         var runningRequests = new List<Task>();
         foreach (var stock in stocks)
         {
-            runningRequests.Add(GettingData.GetStockStartPriceAsync(stock, startDate));
-            runningRequests.Add(GettingData.GetStockEndPriceAsync(stock, endDate));
+            runningRequests.Add(moexService.GetStockStartPriceAsync(stock, startDate));
+            runningRequests.Add(moexService.GetStockEndPriceAsync(stock, endDate));
         }
         await Task.WhenAll(runningRequests.ToArray());
         CalcResults();
