--- a/MOEX_web/Pages/Portfolio.razor
+++ b/MOEX_web/Pages/Portfolio.razor
@@ -82,8 +82,8 @@
 
     public void DeleteStock(object item) => stocks.Remove(item as Stock);
 
-    public void SavePortfolioClick(MouseEventArgs e) => SavePortfolio(stocks);
-    public async Task SavePortfolio(List<Stock> stocks) => await SavingData.PushDataToFileAsync(stocks, PortfolioFile);
+    public void SavePortfolioClick(MouseEventArgs e) => Task.WaitAll(SavePortfolioAsync(stocks));
+    public async Task SavePortfolioAsync(List<Stock> stocks) => await SavingData.PushDataToFileAsync(stocks, PortfolioFile);
 
     public async Task LoadPortfolioClick(MouseEventArgs e) => stocks = await SavingData.LoadDataFromFileAsync(PortfolioFile);
 
@@ -91,7 +91,7 @@
     {
         endDate = DateTime.Today.AddDays(-2).SetToWorkDay();
         startDate = endDate.AddDays(-365).SetToWorkDay();
-        
+
         return Task.CompletedTask;
     }
 }
