fix(Portfolio): adding MatBlazor dependency

--- a/MOEX_web/Pages/Portfolio.razor
+++ b/MOEX_web/Pages/Portfolio.razor
@@ -1,7 +1,8 @@
 @page "/"
 @using MOEX.Services
-@using MOEX.Portfolio
 @inject MoexService moexService
+@using MOEX.Portfolio
+@using MatBlazor
 
 <h1>Stock Price Getter!</h1>
 <h2>Period</h2>
