--- a/MOEX_web/_Imports.razor
+++ b/MOEX_web/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.JSInterop
 @using System.Net.Http
 @using MOEX
-@using MOEX.Shared
 @using MOEX.Portfolio
+@using MOEX.Services
 @using System.Collections.Generic
 @using System
 @using System.Linq
