big move to wasm

--- a/MOEX_web/App.razor
+++ b/MOEX_web/App.razor
@@ -1,4 +1,6 @@
 ﻿
+@namespace MOEX
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
