--- a/MOEX_web/_Imports.razor
+++ b/MOEX_web/_Imports.razor
@@ -1,9 +1,9 @@
 ﻿@using MatBlazor
 @using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using System.Net.Http
 @using MOEX
