added link to source code

--- a/MOEX_web/Shared/MainLayout.razor
+++ b/MOEX_web/Shared/MainLayout.razor
@@ -6,6 +6,11 @@
 </div>
 
 <div class="main">
+
+    <div class="top-row px-4">
+        <a href="https://github.com/mjh-sakh/MOEX-Web" class="ml-md-auto">Source Code</a>
+    </div>
+
     <div class="content px-4">
         @Body
     </div>
