--- a/MOEX_web/Components/LineChart.razor
+++ b/MOEX_web/Components/LineChart.razor
@@ -5,7 +5,7 @@
     <div class="col-md-6 col-sm-12 p-4">
         <label>Smooth <RadzenCheckBox @bind-Value="@smooth" Name="smooth"></RadzenCheckBox></label>
         <RadzenChart>
-            <RadzenLineSeries Smooth="@smooth" Data="@wallet.History" CategoryProperty="Date" Title="Wallet" LineType="LineType.Solid" ValueProperty="NormalizedPrice">
+            <RadzenLineSeries Smooth="@smooth" Data="@wallet.History" CategoryProperty="Date" Title="Portfolio" LineType="LineType.Solid" ValueProperty="NormalizedPrice">
                 <RadzenMarkers MarkerType="MarkerType.Auto" />
             </RadzenLineSeries>
             @for (int i = 0; i < wallet.Stocks.Count; i++)
@@ -17,7 +17,7 @@
             <RadzenCategoryAxis Padding="20" FormatString="{0:MMM}" />
             <RadzenValueAxis Formatter="@Formatter">
                 <RadzenGridLines Visible="true" />
-                <RadzenAxisTitle Text="Price/Value" />
+                <RadzenAxisTitle Text="Interest Rate" />
             </RadzenValueAxis>
         </RadzenChart>
     </div>
