--- a/MOEX_web/Pages/Portfolio-page.razor
+++ b/MOEX_web/Pages/Portfolio-page.razor
@@ -21,12 +21,12 @@
 
 <p>Double click to delete stock</p>
 <p>
-    <MatTable Items="@wallet.Stocks" class="mat-elevation-z5" ShowPaging="false" Striped="true" AllowSelection="true" OnRowDbClick="@DeleteStock">
+    <MatTable Items="@wallet.Stocks" class="mat-elevation-z5" ShowPaging="true" Striped="true" AllowSelection="true" OnRowDbClick="@DeleteStock">
         <MatTableHeader>
-            <th>Name</th>
-            <th>Value</th>
-            <th width="400px">Price at Start</th>
-            <th>Price at End</th>
+            <th style="width:20%;">Name</th>
+            <th style="width:20%;">Value</th>
+            <th style="width:30%;">Price at Start</th>
+            <th style="width:30%;">Price at End</th>
         </MatTableHeader>
         <MatTableRow>
             <td>@context.Name</td>
